--- a/txt/99-appendix.tex
+++ b/txt/99-appendix.tex
@@ -9,7 +9,7 @@ This appendix details the applied encryption and decryption algorithms.
 \section{Encryption algorithm}
 \label{app:encryption}
 \begin{figure}[h]
-    \includegraphics[scale=0.13]{../img/05/encrypt_logs.jpg}
+    \includegraphics[scale=0.158]{../img/05/encrypt_logs.png}
     \centering
     \caption[Encryption algorithm]{The encryption algorithm takes a signed log and a set of receivers as input. It returns a JWE-token which can only be decrypted by the specified set of users.}
     \label{app:encryption_algo}
@@ -18,7 +18,7 @@ This appendix details the applied encryption and decryption algorithms.
 \section{Decryption algorithm}
 \label{app:decryption}
 \begin{figure}[h]
-    \includegraphics[scale=0.13]{../img/05/decrypt_logs.jpg}
+    \includegraphics[scale=0.153]{../img/05/decrypt_logs.png}
     \centering
     \caption[Decryption algorithm]{The decryption algorithm takes a JWE token and a private decryption key as input. It returns the decrypted log if the user is allowed to decrypt.}
     \label{app:decryption_algo}
@@ -30,7 +30,7 @@ This appendix contains screenshots of the implemented features in the \emph{Clot
 
 \label{app:screenshots}
 \begin{figure}[h!]
-    \fbox{\includegraphics[scale=0.25]{../img/06/clotilde_overview.jpg}}
+    \fbox{\includegraphics[scale=0.3]{../img/06/clotilde_overview.png}}
     \centering
     \caption[Clotilde UI: Overview]{
         The updated overview page of the Clotilde UI. 
@@ -40,7 +40,7 @@ This appendix contains screenshots of the implemented features in the \emph{Clot
 \end{figure}
 \newpage
 \begin{figure}[h!]
-   \fbox{\includegraphics[scale=0.25]{../img/06/clotilde_share.jpg}}
+   \fbox{\includegraphics[scale=0.35]{../img/06/clotilde_share.png}}
     \centering
     \caption[Clotilde UI: Share and revoke access]{
         This view allows the user to share or revoke access to a log. 
@@ -52,7 +52,7 @@ This appendix contains screenshots of the implemented features in the \emph{Clot
 \end{figure}
 
 \begin{figure}[h!]
-    \fbox{\includegraphics[scale=0.25]{../img/06/clotilde_shared.jpg}}
+    \fbox{\includegraphics[scale=0.35]{../img/06/clotilde_shared.png}}
     \centering
     \caption[Clotilde Ui: Shared logs]{
         This view lists all logs which were shared with the logged-in users.
