--- a/txt/5-protocol-design.tex
+++ b/txt/5-protocol-design.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 
-\chapter{Protocol design}
+\chapter{Design}
 \label{chap:design}
 
 This chapter describes and justifies the protocol designed in the context of this thesis.
@@ -28,12 +28,12 @@ The first key pair is dedicated to encrypting data.
 Its public key is called the encryption key while its private key is called the decryption key.
 The second key pair is intended to sign data.
 Its public key is called the verification key while its private key is called the signing key.
-Public keys are represented by PEM-encoded certificates which are signed by a trusted CA.
+Public keys are represented by PEM-encoded certificates signed by a trusted CA.
 Private keys are represented by a PEM-encoded private key.
 This separation of keys is considered to be the best practice in modern key management~\cite[33]{Barker2006}.
 Each user needs to have exclusive access to its private keys.
 The public keys of all users are expected to be publicly available in the system.
-The protocol further assumes that a user that participates in the system has access to its key material (e.g. via hardware token).
+The protocol further assumes that a user that participates in the system has access to its key material, e.g. via hardware token.
 
 The protocol relies on three fundamental cryptographic operations:
 Signing, encrypting, and decrypting logs.
@@ -46,7 +46,7 @@ Whenever a monitor component observes a data access it is required to create an 
 A log must always be a signed data structure.
 Thus, the protocol requires the monitor to perform two tasks.
 First, the raw log data needs to be cryptographically signed by the monitor.
-Second, the log needs to be encrypted for the data owner (only the data owner is allowed to access the log upon creation).
+Second, the log needs to be encrypted only for the data owner.
 The encrypted log is finally sent to the \emph{Safekeeper}.
 This allows the data owner to request and decrypt the log.
 The decryption process also involves validity checks of the received data.
@@ -55,11 +55,11 @@ This ensures that the protocol was applied correctly.
 The data owner can share or revoke access to a log for users.
 The data owner needs to download and decrypt the log from the server first.
 To share or revoke access the data owner then needs to apply the encryption algorithm with a set of desired users.
-Please note that the decrypted log stores information about the users who are currently allowed to access the log.
+Note that the decrypted log stores information about the users who are currently allowed to access the log.
 Access can be shared by adding additional users during encryption.
 Access can be revoked by omitting users during encryption.
 It is crucial to the protocol that the data owner always specifies itself within the set of authorized users.
-Otherwise, the data owner can not decrypt the log anymore.
+Otherwise, the data owner cannot decrypt the log anymore.
 Finally, the user uploads the log to the server.
 
 Users who are specified during a sharing process can download and decrypt the corresponding log.
@@ -67,7 +67,7 @@ They can request the server for those logs and apply their private decryption ke
 Again, validity checks of the received data ensure that the defined security requirements are respected.
 
 
-Please note that the encryption algorithm can be applied by the monitor and the owner of the log.
+Note that the encryption algorithm can be applied by the monitor and the owner of the log.
 Although only data owners are allowed to share and revoke access to logs, the log must be initially made available for the data owner.
 This can be done by encrypting the log only for the data owner:
 Whenever a monitor created and signed a new log it applies the encryption algorithm.
@@ -75,7 +75,7 @@ The only recipient for this new log must be the data owner.
 To ensure that the monitor does not specify other unintended users, validation checks during decryption are mandatory.
 
 \begin{figure}[h!]
-    \includegraphics[width=10cm]{../img/05/overview.jpg}
+    \includegraphics[width=12.7cm]{../img/05/overview.png}
     \centering
     \caption[Protocol overview]{
         The performed tasks and data flows when creating, encrypting, decrypting, and sharing logs in the toolchain.
@@ -111,7 +111,7 @@ Consider a log that is signed by the data owner indicating that he intentionally
 This signed log is then encrypted for a set of users.
 Assume that a malicious user can decrypt the cipher because the data owner encrypted the log for him.
 Nothing prevents him from re-encrypting the signed log for any other users.
-The problem arises because those other users can not verify if the data owner has intended to share the log with them.
+The problem arises because those other users cannot verify if the data owner has intended to share the log with them.
 They only know that the log was signed by the data owner.
 This flaw can be mitigated by explicitly signing the intended recipients.
 This allows a recipient to ensure that the data was intentionally encrypted for him by the claimed creator.~\cite{Davis2001}
@@ -119,13 +119,13 @@ This allows a recipient to ensure that the data was intentionally encrypted for 
 For the protocol designed in the context of this thesis, those considerations have two implications.
 First, a log must be signed by the creator whenever it is shared.
 The creator must additionally sign the set of intended recipients.
-Please note that the log itself is also a signed data structure.
+Note that the log itself is also a signed data structure.
 The log must always be signed by the monitor specified within the log to avoid the forgery of logs (security requirement~S3).
 The signature of the creator ensures that unauthorized sharing operations can be detected (security requirement~S2).
 This construction nests singed data structures into each other.
 Details can be found in \cref{sec:encrypting}.
 Second, the signed data is then encrypted for the specified recipients.
-This produces the ciphertext which can only be decrypted by those recipients (security requirement~S1).
+This produces a ciphertext that can only be decrypted by those recipients (security requirement~S1).
 
 \subsection{Metadata}
 \label{sec:metadata}
@@ -133,12 +133,12 @@ The exchanged logs are always encrypted.
 This affects the performance of the toolchain.
 From the perspective of intermediate servers, an encrypted log does not provide any meaningful information.
 Specifically, they do not know which users have access to a log.
-Hence, the server can not associate a log with the authorized users.
+Hence, the server cannot associate a log with the authorized users.
 This introduces two practical problems.
 
 The first problem occurs when Alice tries to request logs concerning her.
-If the server can not associate logs with users, it must reply with all logs stored in the system.
-As a consequence, Alice receives many logs that she can not decrypt.
+If the server cannot associate logs with users, it must reply with all logs stored in the system.
+As a consequence, Alice receives many logs that she cannot decrypt.
 Since the raw cipher does not tell her which logs are intended for her, Alice must try to decrypt all logs to find the logs encrypted under her public key.
 This is very inefficient and requires a lot of computational power.
 To avoid this, the set of recipients can be attached as metadata to the encrypted log.
@@ -149,7 +149,7 @@ Alice wants to share her log with Bob.
 Before the sharing process starts, the encrypted log is stored on the server.
 Alice re-encrypts the log under the public key of Bob.
 She authenticates against the server and tries to update the stored log.
-The server, however, does not know if Alice is the legitimate owner of the stored log (because it can not associate users with a log).
+The server, however, does not know if Alice is the legitimate owner of the stored log because it cannot associate users with a given log.
 Thus, the server does not allow Alice to update her log.
 To avoid this, the server must know the identity of the data owner for all logs.
 This can be realized by attaching the identity of the owner as metadata to the encrypted log.
@@ -159,16 +159,17 @@ This information can be interpreted as routing information and must be attached 
 It allows the server to filter logs concerning a particular user.
 Moreover, the server can allow data owners to modify their encrypted logs.
 This practically enables them to share and revoke access to logs.
-The construction, however, implies that the data sent over the insecure network contains the set of recipients twice (once in the metadata and once within the encrypted data).
+The construction implies, however, that the data sent over the insecure network contains the set of recipients twice.
+Once within the metadata and once within the encrypted data.
 
 \subsection{Realization via JOSE}
 \label{sec:jose-protocol}
 
 A log within the current \emph{Inverse Transparency} toolchain is represented by a JSON object.
-This motivates the usage of the JOSE standard (JOSE)~\cite{Barnes2014}.
+This motivates the usage of the JOSE standard~\cite{Barnes2014}.
 Details about it can be found in \cref{sec:jose}.
-The JOSE standard can be used to cryptographically sign (JWS) and encrypt (JWE) JSON data.
-It defines multiple algorithms which can be used.
+The JOSE standard can be used to cryptographically sign~(JWS) and encrypt~(JWE) JSON data.
+It defines multiple algorithms that can be used.
 Specifically, JWE tokens can be computed using hybrid encryption algorithms.
 Since JWS and JWE tokens can also be nested into each other, JOSE can be used to realize the desired protocol by the following means:
 \begin{enumerate}
@@ -176,7 +177,7 @@ Since JWS and JWE tokens can also be nested into each other, JOSE can be used to
     A log is a JWS token signed by the monitor.
     It is referred to as the inner JWS token because it is nested into another JWS token.
     \item 
-    To encrypt a log, the creator computes a JWS token which contains the log as a nested token.
+    To encrypt a log, the creator computes a JWS token, which contains the log as a nested token.
     The token additionally contains the set of intended recipients and the identity of the owner.
     This outer JWS token is called a shared log in the context of this protocol.
     See \cref{fig:nested-jws} for a visualization of the nested tokens.
@@ -188,7 +189,7 @@ Since JWS and JWE tokens can also be nested into each other, JOSE can be used to
 
 
 \begin{figure}[h!]
-    \includegraphics[width=4cm]{../img/05/nested_jws.jpg}
+    \includegraphics[width=5.5cm]{../img/05/nested_jws.png}
     \centering
     \caption[Nested JWS tokens]{A log is a JWS token signed by the monitor. A shared log is a JWS token that contains a nested log. It is signed by the entity encrypting the log.}
     \label{fig:nested-jws}
@@ -200,10 +201,10 @@ Since JWS and JWE tokens can also be nested into each other, JOSE can be used to
 \section{Creating logs}
 \label{sec:signing}
 A log is represented by a JWS token.
-It contains the identity of the owner, the identity of the monitor, and further information which are relevant to identify the data access (see \cref{fig:nested-jws}).
+It contains the identity of the owner, the identity of the monitor, and further information that is relevant to identify the data access (see \cref{fig:nested-jws}).
 To avoid malicious data owners manipulating or creating new logs, each log needs to be signed by the monitor specified within the log.
 To create a JWS token, the monitor requires access to its private signing key.
-A log is signed with the algorithm \verb|ES256| which relies on \verb|ECDSA| and \verb|SHA-256|.
+A log is signed with the algorithm ES256, which relies on ECDSA and SHA-256.
 It is defined by the JSON Web Algorithm specification~\cite{JWA2015}.
 The log is later used as input for the encryption algorithm.
 This construction is intended to resolve security requirement S3 because it allows decrypting users to verify if the provided log was indeed created by the claimed monitor.
@@ -219,15 +220,15 @@ More specifically, the set of authorized users must only contain the data owner 
 The data owner of the log might decide to share or revoke access to a log for users later on.
 This requires the re-encryption of the log.
 The data owner must always include his own identity in the set of authorized users.
-The encryption algorithm outputs a JWE token which can be decrypted by the specified users.
+The encryption algorithm outputs a JWE token, which can be decrypted by the specified users.
 
 Internally, the encryption algorithm creates another JWS token.
-This token is signed with the private signing key of the user encrypting the log (e.g. the creator).
+This token is signed with the private signing key of the user encrypting the log (i.e. the creator).
 It is called a shared log because it contains a nested log plus the set of recipients plus the identity of the creator (see \cref{fig:nested-jws}).
-The latter allows a decrypting user to download the public key of the creator which is used to verify the shared log.
+The latter allows a decrypting user to download the public key of the creator, which is used to verify the shared log.
 The set of recipients is included to mitigate surreptitious forwarding.
 This construction is intended to resolve security requirement S2.
-It allows to verify if the data owner has intended to share the log with a respective receiver.
+It allows to verify whether the data owner has intended to share the log with a respective receiver.
 This resists surreptitious forwarding attacks~\cite{Davis2001}.
 
 Once the  shared log is created, it is used to compute the final JWE token.
@@ -241,12 +242,12 @@ This is an symmetric encryption algorithm based on 256-bit AES using the Galois/
 The used symmetric key must then be encrypted for each intended recipient.
 This allows the distribution of the key to all recipients.
 It is realized using the key-wrapping algorithm \verb|ECDH-ES+A256KW|.
-The algorithm returns a cipher which can be decrypted by the receiver.
+The algorithm returns a cipher that can be decrypted by the receiver.
 It must be executed once for each receiver.
 The specification of \verb|ECDH-ES+A256KW| requires the following steps to encrypt the symmetric key $k$ for a single receiver~\cite[100]{Barker2017}.
 This is also illustrated in \cref{fig:key_wrapping}.
 \begin{figure}[ht]
-    \includegraphics[scale=0.2]{../img/07/key_wrapping.jpg}
+    \includegraphics[scale=0.2]{../img/05/key_wrapping.png}
     \centering
     \caption[Key-wrapping ECDH-ES+A256KW]{
         Key-wrapping of the symmetric key k using ECDH-ES+A256KW.
@@ -273,7 +274,7 @@ This is also illustrated in \cref{fig:key_wrapping}.
     The receiver knows the ephemeral public key of the sender and the static private key of the receiver.
     Thus, the Diffie-Hellman key agreement protocol can be used to compute a shared secret between the sender and the receiver~\cite[438]{Eckert2018}.
     The computation of the shared secret requires either the ephemeral private key or the static private key.
-    If both are kept secret it is assumed to be computationally infeasible to compute the shared secret~\cite[438]{Eckert2018}.
+    If both are kept secret, it is assumed to be computationally infeasible to compute the shared secret~\cite[438]{Eckert2018}.
     \item 
     The shared secret, which is the result of the Diffie-Hellman key agreement protocol, is used as input for a key derivation function.
     This function computes the ephemeral key between the sender and the receiver.
@@ -304,7 +305,7 @@ This effectively restores the shared log for the receiver.
 No decryption is necessary to access the metadata because is stored in the protected header of the JWE.
 If the decryption is successful, the decrypting user has access to the shared log and the metadata.
 Multiple validations are necessary to ensure that the protocol is used correctly.
-If any of them fails the decryption must be aborted.
+If any of them fails, the decryption must be aborted.
 \begin{enumerate}
     \item 
     The signature of the obtained shared log (outer JWS token) must be validated.
@@ -318,13 +319,13 @@ If any of them fails the decryption must be aborted.
     \item
     The metadata includes the set of recipients.
     The shared log also includes this information.
-    Only if both sets are equal the token was not modified during transit.
+    Only if both sets are equal, the token was not modified during transit.
     \item
     The user applying the decryption must be part of the set of recipients.
     If this is true, the user can ensure that the creator intended to share the log with him or her.
     \item
     The owner specified in the metadata must be equal to the owner specified in the log.
-    Only if both are equal the token was not modified during transit.
+    Only if both are equal, the token was not modified during transit.
     \item
     The log specifies the owner and the monitor of the log.
     The shared log specifies the creator of the encrypted message.
@@ -338,7 +339,7 @@ If any of them fails the decryption must be aborted.
     This implies that the owner shared the log with other users.
     In this case, the set of recipients can be arbitrary.
 \end{enumerate}
-If all those validations succeed the received log can be trusted.
+If all those validations succeed, the received log can be trusted.
 A visualization of the decryption process can be found in \cref{app:decryption}
 
 \end{document}
