--- a/txt/7-evaluation.tex
+++ b/txt/7-evaluation.tex
@@ -35,7 +35,7 @@ Moreover, the server can ensure that only the specified data owner can update a 
 This effectively enables the functionality to share and revoke access to the log.
 Sharing a log is realized by adding additional users to the set of authorized users.
 Revoking access to logs requires removing a user from this set.
-Since new key material is generated during encryption, revoked users can not re-use older decryption keys to access the log.
+Since new key material is generated during encryption, revoked users cannot re-use older decryption keys to access the log.
 
 This analysis shows that the designed protocol fulfills all identified functional requirements.
 A data owner can always access its logs and it can share and revoke access to them.
@@ -57,14 +57,13 @@ They argue why the established security mechanisms resist them.
 \subsection{Assumptions}
 
 The security of the protocol relies on three fundamental assumptions.
-If one of those assumptions is violated the protocol is considered insecure.
+If one of those assumptions is violated, the protocol is considered insecure.
 
 First, it its assumed that the protocol has access to a secure PKI.
 The PKI assigns the identities of users to their public keys via certificates.
-Each user requires two key pairs (one for encrypting data and one for signing data).
 The user must have exclusive access to his private keys.
 The public keys are distributed via certificates signed by a trusted certificate authority.
-If any private key (either of a user or the certificate authority) is compromised the intended E2EE is broken.
+If any private key is compromised, the intended E2EE is broken.
 A private key is assumed to be compromised if any entity besides the owner of the private key has access to it.
 Second, it is assumed that the JOSE standard provides secure encryption and signing algorithms.
 Specifically, \verb|A256GCM| and \verb|ECDH-ES+A256KW| must be secure encryption algorithms and \verb|ES256| must be a secure signing algorithm.
@@ -73,17 +72,17 @@ Third, the libraries implemented in this thesis rely on language-specific JOSE i
 It is assumed that those libraries follow the specifications and definitions of the JOSE protocol.
 
 \subsection{Curious server}
-A curious server is a passive attacker which tries to access the logs within the toolchain.
-It motivated security requirement S1 which states that only the data owner and explicitly authorized users can access logs.
+A curious server is a passive attacker that tries to access the logs within the toolchain.
+It motivated security requirement S1, which states that only the data owner and explicitly authorized users can access logs.
 Recall the attacker Eve who is the database admin of the \emph{Safekeeper} server (details in \cref{security-requriements}).
-This section argues why Eve can not access logs if he was not explicitly authorized.
+This section argues why Eve cannot access logs if he was not explicitly authorized.
 
 The protocol enforces that only encrypted data is stored in the database.
 Both, the monitor creating a log and the data owner sharing a log must encrypt the data before sending it to the server.
 The server only has access to the JWE token created by the encryption algorithm.
 This JWE token relies on hybrid encryption:
 First, a symmetric key $k$ is randomly generated and the data is encrypted via \verb|A256GCM|.
-This is an authenticated\footnote{Please note that this authentication does not guarantee the authenticity of the sending user. This is because in a symmetric encryption scheme the authenticity is always bound the knowledge of the symmetric key. Since multiple receivers might have access to the symmetric key this authentication only ensures that any of those users generated the cipher. To ensure the authenticity of the sending user, the protocol must include a digital signature.~\cite[315]{Eckert2018}} symmetric encryption algorithm based on AES~\cite{JWA2015}.
+This is an authenticated\footnote{Note that this authentication does not guarantee the authenticity of the sending user. This is because in a symmetric encryption scheme the authenticity is always bound the knowledge of the symmetric key. Since multiple receivers might have access to the symmetric key this authentication only ensures that any of those users generated the cipher. To ensure the authenticity of the sending user, the protocol must include a digital signature.~\cite[315]{Eckert2018}} symmetric encryption algorithm based on AES~\cite{JWA2015}.
 Secondly, this symmetric key $k$ is encrypted for each receiver using \verb|ECDH-ES+A256KW|~\cite{JWA2015}.
 This key-wrapping algorithm establishes an ephemeral key between two users.
 This ephemeral key is finally used to encrypt the symmetric key $k$.
@@ -91,24 +90,24 @@ Details about this algorithm can be found in \cref{sec:encrypting}.
 
 To access a decrypted log the attacker Eve needs to have access to the symmetric key $k$.
 This requires him to decrypt any of the encrypted keys attached to the JWE token.
-To succeed, Eve must have access to any of the ephemeral keys which were used to encrypt $k$.
+To succeed, Eve must have access to any of the ephemeral keys used to encrypt $k$.
 Eve can compute an ephemeral key only if he has access to either the ephemeral private key of the sender or the static private key of the receiver.
 However, those private keys must be kept secret.
-If Eve wants to decrypt the log he must either break the encryption algorithms or access a private key.
+If Eve wants to decrypt the log, he must either break the encryption algorithms or access a private key.
 This, however, contradicts the assumptions.
-If Eve can break the encryption the used encryption algorithm it is not secure.
-If Eve can access a private key of a user the PKI is not secure.
-This leads to the conclusion that the malicious database admin Eve can not access decrypted logs.
-Only if he was explicitly authorized he can restore the symmetric key $k$ which allows the decryption of a log.
+If Eve can break the encryption, the used encryption algorithm it is not secure.
+If Eve can access a private key of a user, the PKI is not secure.
+This leads to the conclusion that the malicious database admin Eve cannot access decrypted logs.
+Only if he was explicitly authorized, he can restore the symmetric key $k$, which allows the decryption of a log.
 
-Please note that a curious server has access to the metadata of an encrypted log.
-This metadata consists of the identity of the data owner (which ensures only authorized users can update the stored log) and the identities of the recipients (which ensures that the \emph{Safekeeper} can distribute the logs to the correct users.)
-Although intermediate servers can not access the log data itself anymore, the metadata yields the information of which users have access to which log.
+Note that a curious server has access to the metadata of an encrypted log.
+This metadata consists of the identity of the data owner, which ensures only authorized users can update the stored log, and the identities of the recipients, which ensures that the \emph{Safekeeper} can distribute the logs to the correct users.
+Although intermediate servers cannot access the log data itself anymore, the metadata yields the information which users have access to which log.
 This information could be subject to a metadata analysis attack~\cite{Greschbach2012,Mayer2016}.
 If the underlying single-sign-on server supports pseudonyms for users, however, this attack could be made significantly more difficult.
 Pseudonyms could be assigned to the users participating in the system.
 Instead of providing a unique identity within the metadata, a random pseudonym of the user could be chosen.
-Assuming that the intermediate server can not link pseudonyms back to users, this would make the metadata analysis pointless.
+Assuming that the intermediate server cannot link pseudonyms back to users, this would make the metadata analysis pointless.
 
 \subsection{Surreptitious forwarding}
 Surreptitious forwarding refers to an attack where a malicious user re-encrypts and forwards a received log for unintended users~\cite{Davis2001}.
@@ -118,7 +117,7 @@ Recall the attacker described in \cref{security-requriements}.
 Alice shares a log with Eve.
 This implies that Eve has access to the decrypted data.
 Eve, however, does not stick to the protocol and encrypts the received log for Bob.
-Bob must be able to detect this fraud because the log he received was not encrypted by the data owner (Alice).
+Bob must be able to detect this fraud because the log he received was not encrypted by the data owner Alice.
 This section argues why the designed protocol can detect this attack.
 
 The construction introduced to defend against this attack is the shared log.
@@ -131,13 +130,13 @@ This requires the following three checks.
 
 First of all, the receiver needs to verify if the shared log was signed by the claimed creator.
 It fetches the public key of the claimed creator and verifies the cryptographic signature.
-If the signature is valid the receiver can be sure that the log was signed by the private signing key of the creator.
+If the signature is valid, the receiver can be sure that the log was signed by the private signing key of the creator.
 Second, the receiver then needs to check if the creator is the data owner. 
 This is achieved by checking if the identity of the creator (shared log) is equal to the identity of the data owner in the nested log.
-If this holds and if the log was indeed signed by a valid monitor the receiver can be sure that the data owner created and signed the shared log.
+If this holds and if the log was indeed signed by a valid monitor, the receiver can be sure that the data owner created and signed the shared log.
 This, however, does not prevent surreptitious forwarding.
 In a third check, the receiver must verify if his identity is specified in the list of intended receivers (shared log).
-If this is true the receiver knows that the data owner intentionally shared the log with him or her.
+If this is true, the receiver knows that the data owner intentionally shared the log with him or her.
 This follows from two observations:
 First, the receiver can be sure that the shared log was indeed created by the data owner.
 Second, the receiver knows that the data owner included his identity in the set of intended receivers.
@@ -193,10 +192,10 @@ First, he could specify his identity and sign the log with his private signing k
 Eve must be a valid monitor because otherwise, the recipient would detect the fraud.
 Second, Eve could specify an existing monitor in the log.
 This passes the check if the claimed monitor is allowed to create logs.
-However, it requires Eve to create a signature in the name of the monitor which contradicts the assumptions.
+However, it requires Eve to create a signature in the name of the monitor, which contradicts the assumptions.
 Either he needs access to the private signing key of the claimed monitor (insecure PKI) or he needs to break the signing algorithm (insecure algorithm).
 Both options are not feasible under the given assumptions.
-Thus, a malicious data owner Eve can not introduce forged logs into the system.
+Thus, a malicious data owner Eve cannot introduce forged logs into the system.
 
 \section{Performance}
 \label{sec:evaluation-perf}
@@ -204,7 +203,7 @@ Thus, a malicious data owner Eve can not introduce forged logs into the system.
 \subsection{Encryption}
 As elaborated in the previous chapters, the designed and implemented protocol is based on hybrid encryption.
 Logs can therefore  be encrypted for multiple recipients.
-The symmetric key $k$ (which encrypts the log) must be encrypted for each receiver.
+The symmetric key $k$, which encrypts the log, must be encrypted for each receiver.
 This implies that if a log is shared with $n$ users the key $k$ must be encrypted $n$ times.
 The encryption duration increases linearly with the number of recipients.
 This section aims to provide resilient measurements of those costs.
@@ -222,7 +221,7 @@ The average of those runs is said to be the encryption duration for the number o
 The performance tests were executed on a machine running \emph{macOS Monterey} with an \emph{Apple M1} CPU (ARM64) and 16 GB RAM..
 The Go library was compiled with Go 1.18.3\footnote{\url{https://go.dev/doc/devel/release}}.
 The Typescript package was compiled into Javascript using TSC 4.8.3\footnote{\url{https://www.typescriptlang.org/docs/handbook/compiler-options.html}}. 
-It was then executed by the Node.js version 18.12.1\footnote{\url{https://nodejs.org/ca/blog/release/v18.12.1/}} which is built upon the V8 engine 10.2.154.15\footnote{\url{https://v8.dev/}}.
+It was then executed by the Node.js version 18.12.1\footnote{\url{https://nodejs.org/ca/blog/release/v18.12.1/}}, which is built upon the V8 engine 10.2.154.15\footnote{\url{https://v8.dev/}}.
 The Python tests were run under Python 3.9.6\footnote{\url{https://www.python.org/downloads/release/python-396/}} using the CPython\footnote{\url{https://github.com/python/cpython}} interpreter.
 
 \subsubsection{Results}
@@ -230,7 +229,7 @@ The results of all three libraries are illustrated in \cref{fig:performance}.
 It shows the encryption duration in milliseconds for a different number of recipients.
 In general, one can observe that the Go implementation is the fastest library.
 This meets the expectations because Go is a compiled language while Python and Typescript are interpreted.
-Please note that Typescript is compiled into Javascript.
+Note that Typescript is compiled into Javascript.
 The resulting Javascript code, however, is also interpreted by the V8 engine included in Node.js.
 The performance difference between the Python and Typescript implementations is remarkable.
 Both rely on the native OpenSSL module installed on the operating system.
@@ -286,7 +285,7 @@ For example, the legacy toolchain computes some metadata data over the returned 
 Third, the client computation time is the time needed by the client to process the fetched data until it is available for visualization.
 For example, the overview data must be computed by the front-end in the context encrypted logs.
 This is because this metadata can only be calculated once the logs are decrypted.
-Moreover, the client computation includes all tasks which are performed once the API call has finished.
+Moreover, the client computation includes all tasks that are performed once the API call has finished.
 The time for decrypting logs is therefore also part of the client computation.
 
 The database queries are measured directly within the \emph{Safekeeper} component.
@@ -300,7 +299,7 @@ The test are run for $1$, $10$ and $100$ logs.
 For a fixed number of logs a test is repeated $100$ times.
 The presented numbers are the averages of those runs.
 All tests are run against the legacy toolchain and against the updated toolchain.
-The tests were executed within the development environment which was started using \verb|docker compose|.
+The tests were executed within the development environment, which was started using \verb|docker compose|.
 They were executed on a machine running \emph{macOS Monterey} with an \emph{Apple M1} ARM64 CPU and 16 GB RAM.
 
 
@@ -310,9 +309,9 @@ Overall, the legacy toolchain requires on average $142ms$ to fetch a single log,
 The server computation time increases when multiple logs are fetched.
 This is expected because the server computation time includes the transmission delay over the network.
 Furthermore, one can observe that the client computation time is very short.
-The main reason for this lies in the fact that the server performs all pre-computation steps which are needed to visualize the logs in the front-end.
+The main reason for this lies in the fact that the server performs different pre-computation steps needed to visualize the logs in the front-end.
 Hence, the front-end can directly visualize the logs without further computations.
-For example, the server fetches metadata from the database to provide the number of logs which were created within a specific tool.
+For example, the server fetches metadata from the database to provide the number of logs that were created within a specific tool.
 The database queries account for a big portion of the time needed to fetch logs from the server.
 There are two main reasons for this.
 First, the pre-computed data of the server requires multiple database queries.
